# bangumi-mappings

./: .gitignore  Cargo.toml  anilist_mappings.json  anilist_mappings_2015.json  anilist_mappings_2016.json  anilist_mappings_2017.json  anilist_mappings_2018.json  anilist_mappings_2019.json  anilist_mappings_2022.json  anilist_mappings_2023.json  anilist_mappings_2024.json  anilist_mappings_2025.json
data/: anime_1990.json  anime_1991.json  anime_1992.json  anime_1993.json  anime_1994.json  anime_1995.json  anime_1996.json  anime_1997.json  anime_1998.json  anime_1999.json  anime_2000.json  anime_2001.json  anime_2002.json  anime_2003.json  anime_2004.json  anime_2005.json  anime_2006.json  anime_2007.json  anime_2008.json  anime_2009.json  anime_2010.json  anime_2011.json  anime_2012.json  anime_2013.json  anime_2014.json  anime_2015.json  anime_2016.json  anime_2017.json  anime_2018.json  anime_2019.json  anime_2020.json  anime_2021.json  anime_2022.json  anime_2023.json  anime_2024.json  anime_2025.json
dump/: anilist_1990.json  anilist_1991.json  anilist_1992.json  anilist_1993.json  anilist_1994.json  anilist_1995.json  anilist_1996.json  anilist_1997.json  anilist_1998.json  anilist_1999.json  anilist_2000.json  anilist_2001.json  anilist_2002.json  anilist_2003.json  anilist_2004.json  anilist_2005.json  anilist_2006.json  anilist_2007.json  anilist_2008.json  anilist_2009.json  anilist_2010.json  anilist_2011.json  anilist_2012.json  anilist_2013.json  anilist_2014.json  anilist_2015.json  anilist_2016.json  anilist_2017.json  anilist_2018.json  (+7 more)
src/: agent.rs  (+14 more)
(+103 files in other folders)
