[package]
name = "anime-matcher-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = {git = "https://github.com/0xPlaygrounds/rig"}
tokio = { version = "1.39.0", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.105"
tracing = "0.1.41"
tracing-subscriber = "0.3.1"
anyhow = "1.0.89"
thiserror = "2.0.12"
tmdb-api = { git = "https://github.com/lyqingye/tmdb-api.git" }
reqwest = { version = "0.12.11", features = ["json", "rustls-tls"], default-features = false }
schemars = "0.8.16"
dotenv = "0.15.0"
clap = { version = "4.5.35", features = ["derive"] }
governor = { version = "0.8", features = ["jitter", "std"] }
chrono = "0.4.40"